Fixed z-index of footer by setting position to relative

--- a/app/styles/partials/_layout.scss
+++ b/app/styles/partials/_layout.scss
@@ -165,6 +165,7 @@ body {
 		}
 	}
 	footer {
+		position: relative;
 		.container {
 			color: $black;
 			.testimonials-title {
